--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -45,7 +45,7 @@
 		<!-- botnet tasks section -->
 		<section id="tasks" class="content">
 			<h2>Tasks</h2>
-			<button onClick="scrollDown();">&darr; scroll down</button>
+			<div><button onClick="scrollDown();">&darr; scroll down</button></div>
 			<table id="task-overview" onload="taskrequest()">
 				<thead>
 					<tr>
@@ -58,7 +58,7 @@
 				<tbody id="task-overview-results">
 				</tbody>
 			</table>
-			<button onClick="scrollUp();">&uarr; scroll up</button>
+			<div><button onClick="scrollUp();">&uarr; scroll up</button></div>
 			
 			<!-- create new task -->
 			<h2>Neuen Task erstellen</h2>
