--- a/CNC/Interface/index.html
+++ b/CNC/Interface/index.html
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="design/index.css">
     <link rel="stylesheet" href="design/print.css" media="print">
-    <script src="SendData.js"></script>
     <script src="tasks.js"></script>
-    <script src="cncRequest.js"></script>
+    <script src="status.js"></script>
     <script src="sort.js"></script>
     <script src="menu.js"></script>
+    <script src="cnc.js"></script>
     <title>CNC Interface</title>
 </head>
 
@@ -40,13 +40,15 @@
 				<tbody id="status-overview-results">
 				</tbody>
 			</table>
+			<button onclick="cncServerRequest();">🔃 Reload</button>
 		</section>
 		
 		<!-- botnet tasks section -->
 		<section id="tasks" class="content">
 			<h2>Tasks</h2>
-			<button onClick="scrollDown();">&darr; scroll down</button>
-			<table id="task-overview" onload="taskrequest()">
+			<button onclick="scrollDown();">&darr; scroll down</button>
+			<button onclick="taskRequest();">🔃 Reload</button>
+			<table id="task-overview" onload="taskRequest()">
 				<thead>
 					<tr>
 						<th>ID</th>
@@ -58,23 +60,25 @@
 				<tbody id="task-overview-results">
 				</tbody>
 			</table>
-			<button onClick="scrollUp();">&uarr; scroll up</button>
+			<button onclick="scrollUp();">&uarr; scroll up</button>
+			<button onclick="taskRequest();">🔃 Reload</button>
 			
 			<!-- create new task -->
 			<h2>Neuen Task erstellen</h2>
-			<form id="taskform" onsubmit="sendDataToServer()">
-				<p>ID: <input type="text" id="input_id" name="id"></p>
-				<p>Data: <input type="text" name="data"></p>
+			<form id="taskform">
+				<p>ID (optional): <input type="number" id="input_id" name="id" placeholder="Enter a ID (optional)"></p>
+				<p>Data: <input type="text" id="input_data" name="data" required placeholder="Enter your data"></p>
             
-				<p>Type:<br>
-				<label for="hash-md5">MD5-Hash</label>
-				<input type="radio" name="type" id="hash-md5" value="hash-md5" checked><br>
-				<label for="hash-sha256">SHA256-Hash</label>
-				<input type="radio" name="type" id="hash-sha256" value="hash-sha256"><br>
-				<label for="crack-md5">Crack MD5-Hash</label>
-				<input type="radio" name="type" id="crack-md5" value="crack-md5"></p>
+				<p>Type:
+				<select id="input_type">
+					<option value="hash-md5">MD5-Hash</option>
+					<option value="hash-sha256">SHA256-Hash</option>
+					<option value="crack-md5">MD5-Crack</option>
+				</select>
+				</p>
+				
 				<button type="reset">&#x2612; Formular zurücksetzen</button>
-				<button type="submit">&#x2611; Task starten</button>
+				<button type="button" onclick="tasksSubmitNewTask()">&#x2611; Task starten</button>
 			</form>
 		</section>
 	</main>
